--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <meta name="csrf-token" content="{{ csrf_token }}">
     <title>Home</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-gray-100">
